--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "WebNoveler"
+name = "web_noveler"
 version = "0.1.0"
 edition = "2021"
 publish = false
@@ -8,8 +8,10 @@ publish = false
 
 [dependencies]
 shuttle-runtime = "0.12.0"
+anyhow = "1.0.70"
 serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 shuttle-serenity = "0.12.0"
+shuttle-secrets = "0.12.0"
 tokio = "1.26.0"
 tracing = "0.1.37"
 reqwest = {version = "0.11.14", features = ["blocking"]}
