--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ shuttle-serenity = "0.12.0"
 shuttle-secrets = "0.12.0"
 tokio = "1.26.0"
 tracing = "0.1.37"
-reqwest = {version = "0.11.14", features = ["blocking"]}
+reqwest = "0.11.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.94"
 scraper = "0.15.0"
